--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,12 +11,12 @@ services:
       - 3307:3306
     volumes:
       - db:/var/lib/mysql
-  app:
-    container_name: app
+  achat:
+    container_name: achat
     depends_on:
       - mysqldb
     build: ./
-    image: aymenmz/aymenmz:achat-1.0
+    image: aymenmz/achat:1.0.0
     ports:
       - 8089:8089
     environment:
