--- a/achat/Dockerfile
+++ b/achat/Dockerfile
@@ -1,13 +1,14 @@
 # Use an official OpenJDK runtime as the base image
 FROM openjdk:11-jre-slim
 
+EXPOSE 8089
 # Set the working directory in the container
-WORKDIR /app
+WORKDIR /achat
 
 # Copy the executable JAR file and any other necessary files
-COPY target/achat-1.0.jar .
+COPY target/achat-1.0.jar /achat/
 
-EXPOSE 8089
+
 
 # Set the command to run the Spring Boot application
-CMD ["java", "-jar", "achat-1.0.jar"]
+ENTRYPOINT ["java", "-jar", "achat-1.0.jar"]
