--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     image: backend
     depends_on:
       - mysqldb
-    build: ./
+    build: ./achat
     restart: on-failure
     ports:
       - 8089:8089
