--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,15 @@ logging.level.org.springframework=INFO
 logging.level.root=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{60} - %msg%n
 
-management.endpoints.web.exposure.include=*
-management.endpoint.metrics.enabled=true
-management.metrics.export.prometheus.enabled=true
+management:
+  server:
+    port: 8081
+
+  endpoints:
+    web:
+      exposure:
+        include: health,prometheus
+  prometheus:
+    metrics:
+      export:
+        enabled: true
