--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,19 +16,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 
 #logging configuration
 logging.level.com.zaxxer.hikari=INFO
-logging.level.org.springframework=INFO 
+logging.level.org.springframework=INFO
 logging.level.root=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{60} - %msg%n
 
-management:
-  server:
-    port: 8081
-
-  endpoints:
-    web:
-      exposure:
-        include: health,prometheus
-  prometheus:
-    metrics:
-      export:
-        enabled: true
+### Configuration prometheus ###
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
