--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.prometheus</groupId>
+			<artifactId>simpleclient_httpserver</artifactId>
+			<version>0.13.0</version>
+		</dependency>
 
 	</dependencies>
 	<!-- Deploy to Nexus -->
