--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,6 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{60} - %msg%
 ### Configuration prometheus ###
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+management.metrics.export.prometheus.enabled=true
+management.endpoints.web.base-path=/actuator
+spring.main.allow-bean-definition-overriding=true
