--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,5 +24,5 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{60} - %msg%
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 management.metrics.export.prometheus.enabled=true
-management.endpoints.web.base-path="/actuator"
+management.endpoints.web.base-path=/actuator/prometheus
 spring.main.allow-bean-definition-overriding=true
