--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,7 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{60} - %msg%
 
 ### Configuration prometheus ###
 management.endpoints.web.exposure.include=*
+management.server.port=9090
 management.endpoint.health.show-details=always
 management.metrics.export.prometheus.enabled=true
 management.endpoints.web.base-path=/actuator/prometheus
