--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.servlet.context-path=/SpringMVC
 server.port=8089
 
 ### DATABASE ###
-spring.datasource.url=jdbc:mysql://mysqldb:3306/achatdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/achatdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 ### JPA / HIBERNATE ###
@@ -21,9 +21,8 @@ logging.level.root=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{60} - %msg%n
 
 ### Configuration prometheus ###
+# Enable all endpoints
 management.endpoints.web.exposure.include=*
-management.server.port=9090
+# Customize the base path for actuator endpoints
+management.endpoints.web.base-path=/actuator
 management.endpoint.health.show-details=always
-management.metrics.export.prometheus.enabled=true
-management.endpoints.web.base-path=/actuator/prometheus
-spring.main.allow-bean-definition-overriding=true
