--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,5 +31,12 @@ services:
       - .m2:/root/.m2
     stdin_open: true
     tty: true
+
+  front:
+    container_name: front
+    image: nadhirbenslema/fournisseurfront:1.0.0
+    ports:
+      - 4200:80
+
 volumes:
   db:
