--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,17 +11,21 @@ services:
       - 3307:3306
     volumes:
       - db:/var/lib/mysql
+
   achat:
-    container_name: achat
+    container_name: achatback
     depends_on:
       - mysqldb
-    build: ./
-    image: aymenmzoughi/achat:1.0.0
+    build: 
+      context: ./
+      args:
+        - "BUILD_NO_CACHE=--no-cache"
+    image: aymenmz/achatback:1.0.0
     ports:
       - 8089:8089
     environment:
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url":"jdbc:mysql://mysqldb:3306/achatdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC",        "spring.datasource.username" : "root",
+        "spring.datasource.url":"jdbc:mysql://mysqldb:3306/achatdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC",
         "spring.datasource.username" : "root",
         "spring.datasource.password" :  "",
         "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
@@ -31,5 +35,6 @@ services:
       - .m2:/root/.m2
     stdin_open: true
     tty: true
+
 volumes:
   db:
