--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,22 @@
 version: "3.8"
 
 services:
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.10.0
+    environment:
+      - discovery.type=single-node
+
+  logstash:
+    image: docker.elastic.co/logstash/logstash:7.10.0
+    volumes:
+      - ./logstash/config:/usr/share/logstash/config
+    command: logstash -f /usr/share/logstash/config/logstash.conf
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:7.10.0
+    environment:
+      ELASTICSEARCH_URL: http://elasticsearch:9200
+
   mysqldb:
     image: mysql:5.7
     container_name: mysqldb
