Fix docker-compose.yml for ELK

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,17 +5,28 @@ services:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.10.0
     environment:
       - discovery.type=single-node
+    ports:
+      - 9200:9200  # Add port binding for Elasticsearch
 
   logstash:
     image: docker.elastic.co/logstash/logstash:7.10.0
     volumes:
       - ./logstash/config:/usr/share/logstash/config
     command: logstash -f /usr/share/logstash/config/logstash.conf
+    depends_on:
+      - elasticsearch
+    ports:
+      - 5044:5044  # Add port binding for Logstash
 
   kibana:
     image: docker.elastic.co/kibana/kibana:7.10.0
     environment:
       ELASTICSEARCH_URL: http://elasticsearch:9200
+    depends_on:
+      - elasticsearch
+    ports:
+      - 5601:5601  # Add port binding for Kibana
+
 
   mysqldb:
     image: mysql:5.7
