--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -2,35 +2,40 @@ version: "3.8"
 
 services:
   mysqldb:
-    image: mysql:5.7
-    container_name: mysqldb
+    image: mysql:latest
+    restart: unless-stopped
     environment:
-      - MYSQL_ALLOW_EMPTY_PASSWORD=yes
-      - MYSQL_DATABASE=devops
+      - MYSQL_ALLOW_EMPTY_PASSWORD
+      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=achatdb
     ports:
       - 3306:3306
     volumes:
       - db:/var/lib/mysql
+    networks:
+      - mynetwork
   devops:
-    container_name: devops
+    image: devops
     depends_on:
       - mysqldb
     build: ./
-    image: amenihjr/achat:1.0.0
+    restart: on-failure
     ports:
       - 8089:8089
     environment:
       SPRING_APPLICATION_JSON: '{
-            "spring.datasource.url":"jdbc:mysql://mysqldb:3306/devops?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC",        "spring.datasource.username" : "root",
-            "spring.datasource.username" : "root",
-            "spring.datasource.password" :  "",
-            "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
-            "spring.jpa.hibernate.ddl-auto" : "update"
-      }'
+        "spring.datasource.url"  : "jdbc:mysql://mysqldb:3306/achatdb?useSSL=false",
+        "spring.datasource.username" : "root",
+        "spring.datasource.password" : "root",
+        "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
+        "spring.jpa.hibernate.ddl-auto" : "update"}'
     volumes:
-      - .m2:/root/.m2
-    stdin_open: true
-    tty: true
+      - ./m2:/root/.m2
+    networks:
+      - mynetwork
+networks:
+  mynetwork:
+    driver: bridge
 
 volumes:
   db:
