--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - 3306:3306
     volumes:
       - db:/var/lib/mysql
-  devops:
+  achat:
     container_name: achat
     depends_on:
       - mysqldb
