--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,13 +40,13 @@ services:
       - db:/var/lib/mysql
 
   achat:
-    container_name: achatcontainer
+    container_name: achatcont
     depends_on:
       - mysqldb
       - logstash
     build: 
       context: ./
-    image: aymenmz/achatapp:1.0.0
+    image: aymenmz/achatappspring:1.0.0
     ports:
       - 8089:8089
     environment:
