--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,11 @@ services:
       - ./m2:/root/.m2
     networks:
       - mynetwork
+    node_exporter:
+    image: prom/node-exporter:latest
+    restart: unless-stopped
+    ports:
+      - 9100:9100   
 networks:
   mynetwork:
     driver: bridge
