--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,8 @@ services:
     image: docker.elastic.co/logstash/logstash:8.3.3
     container_name: logstash_springboot
     volumes:
-      - ./logstash/config:/usr/share/logstash/config:ro
+      - /home/vagrant/logstash/config:/usr/share/logstash/config
+
 
     ports:
       - "5044:5044"
