--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,6 +81,7 @@ services:
     volumes:
       - .m2:/root/.m2
       - /home/vagrant/logstash/config:/usr/share/logstash/config
+      - /src/main:/usr/share/logstash/config
     stdin_open: true
     tty: true
 
