--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,8 @@ logging.level.org.springframework=INFO
 logging.level.root=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{60} - %msg%n
 
-
+# Enable all endpoints
+management.endpoints.web.exposure.include=*
+# Customize the base path for actuator endpoints
+management.endpoints.web.base-path=/actuator
+management.endpoint.health.show-details=always
