--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,21 @@
 version: "3.8"
 
 services:
-  mysqldb:
-    image: mysql:5.7
-    container_name: mysqldb
+  mysql:
+    image: mysql:latest
     environment:
-      - MYSQL_ALLOW_EMPTY_PASSWORD=yes
-      - MYSQL_DATABASE=achat
+      MYSQL_ROOT_PASSWORD:
+      MYSQL_ALLOW_EMPTY_PASSWORD:'yes'
+      MYSQL_DATABASE:achat
     ports:
-      - 3306:3306
-    volumes:
-      - db:/var/lib/mysql
+      - "3306:3306"
   achat:
-    container_name: achat
-    depends_on:
-      - mysqldb
-    build: ./
     image: nourelhoudal/achat:1.0.0
     ports:
-      - 8089:8089
+      - "8090:8089"
+    depends_on:
+      - mysql
     environment:
-      SPRING_APPLICATION_JSON: '{
-            "spring.datasource.url":"jdbc:mysql://mysqldb:3306/achatdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC",        "spring.datasource.username" : "root",
-            "spring.datasource.username" : "root",
-            "spring.datasource.password" :  "",
-            "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
-            "spring.jpa.hibernate.ddl-auto" : "update"
-      }'
-    volumes:
-      - .m2:/root/.m2
-    stdin_open: true
-    tty: true
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/achatdb
+      SPRING_DATASOURCE_USERNAME: root
 
-volumes:
-  db:
