--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,17 +2,20 @@
 #http://localhost:8089/SpringMVC/...
 
 #Server configuration
-server.servlet.context-path=/SpringMVC
-server.port=8089
+#server.servlet.context-path=/SpringMVC
+server.port=8082
 
 ### DATABASE ###
-spring.datasource.url=jdbc:mysql://mysqldb:3306/achatdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/achatdb?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
+
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+##spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 #logging configuration
 logging.level.com.zaxxer.hikari=INFO
