--- a/achat/src/main/resources/application.properties
+++ b/achat/src/main/resources/application.properties
@@ -24,7 +24,7 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{60} - %msg%
 # Enable all endpoints
 management.endpoints.web.exposure.include=*
 # Customize the base path for actuator endpoints
-management.endpoints.web.base-path=/actuator
+# management.endpoints.web.base-path=/actuator
 management.endpoint.health.show-details=always
 
 
