--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,54 +1,7 @@
 version: "3.8"
 
 services:
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.3.3
-    container_name: elasticsearch_springboot
-    environment:
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-      - "discovery.type=single-node"
-      - xpack.security.enabled=false
-    ports:
-      - "9200:9200"
-    volumes:
-      - elasticsearch_data:/usr/share/elasticsearch/data
-    networks:
-      - elastic
-
-  kibana:
-    image: docker.elastic.co/kibana/kibana:8.3.3
-    container_name: kibana_springboot
-    ports:
-      - "5601:5601"
-    environment:
-      ELASTICSEARCH_URL: http://elasticsearch:9200
-      ELASTICSEARCH_HOSTS: '["http://elasticsearch:9200"]'
-    depends_on:
-      - elasticsearch
-    networks:
-      - elastic
-
-  logstash:
-    image: docker.elastic.co/logstash/logstash:8.3.3
-    container_name: logstash_springboot
-    volumes:
-      - /home/vagrant/logstash/config:/usr/share/logstash/config
-
-
-    ports:
-      - "5044:5044"
-      - "5000:5000/tcp"
-      - "5000:5000/udp"
-      - "9600:9600"
-    environment:
-      LS_JAVA_OPTS: "-Xmx256m -Xms256m"
-    networks:
-      - elastic
-    depends_on:
-      - elasticsearch
-
-
+  
   mysqldb:
     image: mysql:5.7
     container_name: mysqldb
@@ -82,6 +35,15 @@ services:
       - .m2:/root/.m2
       - /home/vagrant/logstash/config:/usr/share/logstash/config
       - /src/main:/usr/share/logstash/config
+    stdin_open: true
+    tty: true
+
+  angularapp:  
+    container_name: angularcont
+    build:
+      context: ./
+    ports:
+      - 4200:4200
     stdin_open: true
     tty: true
 
