--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,7 @@ services:
     container_name: angularcont
     build:
       context: ./
+    image: aymenmz/achatfront:1.0.0
     ports:
       - 4200:4200
     stdin_open: true
